# RecNetPy

./: .gitignore  .readthedocs.yml  LICENSE  README.md  manager_unittests.py  pyproject.toml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: client.rst  conf.py  dataclasses.rst  examples.rst  getting_started.rst  index.rst  managers.rst
examples/: bio.py  example01.py  selfcheers.py
src/: client.py
src/dataclasses/: __init__.py  account.py  base.py  comment.py  event.py  event_response.py  image.py  invention.py  invention_version.py  loading_screen.py  progression.py  promo_external_content.py  role.py  room.py  score.py  subroom.py  tag.py
src/managers/: __init__.py  account_manager.py  base_manager.py  event_manager.py  image_manager.py  invention_manager.py  room_manager.py
src/misc/: __init__.py  api_responses.py  bitmask_decode.py  date_to_unix.py  patch_many.py  stringify_bulk.py  variable_class.py
src/recnetpy/: __init__.py  client.py
src/recnetpy/dataclasses/: __init__.py  account.py  base.py  comment.py  event.py  event_response.py  image.py  invention.py  invention_version.py  loading_screen.py  progression.py  promo_external_content.py  role.py  room.py  score.py  subroom.py  tag.py
src/recnetpy/managers/: account_manager.py  base_manager.py  event_manager.py  image_manager.py  invention_manager.py  room_manager.py
src/recnetpy/misc/: __init__.py  api_responses.py  chunks.py  date_to_unix.py
src/recnetpy/rest/: __init__.py  http_client.py  request.py  response.py  route_builder.py  route_manager.py
src/recnetpy/rest/async_threads/: __init__.py  async_thread_pool.py
src/recnetpy/rest/exceptions/: __init__.py  (+7 more)
src/recpy/dataclasses/: __init__.py  event_response.py  invention.py  invention_version.py  room.py
src/recpy/managers/: event_manager.py
src/recpy/misc/: constants.py  date_to_unix.py
src/recpy/rest/: route_builder.py  route_manager.py
src/rest/: __init__.py  async_queue.py  http_client.py  http_error.py  make_request.py  request.py  response.py  route_builder.py  route_manager.py
src/rest/async_threads/: async_thread.py  async_thread_pool.py  thread_task.py
src/rest/exceptions/: __init__.py  bad_request.py  internal_server_error.py  not_found.py
(+2 files in other folders)
