[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "recnetpy"
version = "0.1.38"
authors = [
    { name="RecNetBot Development"}
]
description = "RecNetPy is an API wrapper built in Python for pulling data from RecNet."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp==3.8.0",
    "python-dateutil==2.8.2"
]

[project.urls]
"Homepage" = "https://github.com/RecNetBot-Development/RecNetPy"
"Bug Tracker" = "https://github.com/RecNetBot-Development/RecNetPy/issues"